--- a/frontend/stylesheets/pages/_evals.scss
+++ b/frontend/stylesheets/pages/_evals.scss
@@ -52,3 +52,11 @@
     text-align: center;
   }
 }
+
+.btn-conditional {
+  float: right;
+  margin-top: -4px;
+  padding: 3px 7px;
+  box-shadow: none;
+
+}
